-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.3, 4.7.1
-
None
-
Windows 7
-
d63910575949106f84dacf04abaa14fc866aa66b
When dragging a QTreeView row with multiple columns, the drag pixmap looks wrong on Windows (at least Windows 7) : each column gets a blue rounded-rect in the background, rather than seeing a single rounded-rect around the whole row (like we can see in the actual treeview).
This is because QAbstractItemViewPrivate::renderToPixmap asks the delegate to draw the dragged indexes, but doesn't set option.viewItemPosition to Beginning/Middle/End.
To see the bug for yourself, just edit examples/itemviews/dirview/main.cpp and add tree.setDragDropMode(QAbstractItemView::DragOnly),
then drag a file on Windows, and look at the drag pixmap.
I have a unittest and a patch, I'll make a merge request.
- relates to
-
QTBUG-37813 QTreeWidget asserts on drag start after moving/hiding columns
-
- Closed
-
For Gerrit Dashboard: QTBUG-15834 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
5784,2 | Set missing flags in the option when rendering QTreeView drag pixmap | master | qt/qtbase | Status: ABANDONED | -2 | 0 |