src/widgets/itemviews/qtreeview_p.h
@@ -97,6 +97,7 @@ public:
     void initialize();
 
     QItemViewPaintPairs draggablePaintPairs(const QModelIndexList &indexes, QRect *r) const;
+    void adjustViewOptionsForIndex(QStyleOptionViewItemV4 *option, const QModelIndex &current) const;
 
 #ifndef QT_NO_ANIMATION
     struct AnimatedOperation : public QVariantAnimation
@@ -166,6 +167,10 @@ public:
     void updateChildCount(const int parentItem, const int delta);
 
     void paintAlternatingRowColors(QPainter *painter, QStyleOptionViewItemV4 *option, int y, int bottom) const;
+
+    // logicalIndices: vector of currently visibly logical indices
+    // itemPositions: vector of view item positions (beginning/middle/end/onlyone)
+    void calcLogicalIndices(QVector<int> *logicalIndices, QVector<QStyleOptionViewItemV4::ViewItemPosition> *itemPositions) const;
 
     QHeaderView *header;
     int indent;
