tests/auto/widgets/itemviews/qtreeview/qtreeview.pro
@@ -1,4 +1,5 @@
 CONFIG += testcase
 TARGET = tst_qtreeview
 QT += widgets testlib
+QT += widgets-private gui-private core-private
 SOURCES  += tst_qtreeview.cpp
